# Anime-Recommender-5.0

./: .env.example  .gitignore  LICENSE  README.md  auth.py  config.py  database_updater.py  logic.py  pyproject.toml  requirements.txt  server.py  start.py  users_db.json
frontend/: app.js  index.html  styles.css
