[project]
name = "mal-rater-stats"
version = "0.1.0"
description = "A local anime recommendation web app built on MyAnimeList data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "urllib3>=2.2.0",
    "werkzeug>=3.1.7",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
